<resources>
    <string name="app_name">RafaStore</string>

    <!--All data for ActivityMain.java -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="str_nav_shopping_cart">Shopping Cart</string>
    <string name="str_nav_wishlist">Wishlist</string>
    <string name="str_nav_history">Order History</string>
    <string name="str_nav_news">News Info</string>
    <string name="str_nav_notifications">Notifications</string>
    <string name="sub_title_nav_others">Others</string>
    <string name="str_nav_instruction">Instruction</string>
    <string name="str_nav_setting">Settings</string>
    <string name="str_nav_rate">Rate</string>
    <string name="str_nav_about">About</string>
    <string name="press_again_exit_app">Press again to exit</string>

    <string name="title_what_news">What\'s News</string>
    <string name="title_category">Categories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detail_produk">Detail Produk</string>
    <string name="terlaris">Terlaris</string>
    <string name="semua">Semua</string>
    <string name="terbaru">Terbaru</string>
    <string name="lainnya">Lainnya</string>
    <string name="cari">Temukan produk</string>
    <string name="detail">Detail</string>
    <string name="masukkan_keranjang">Masukkan Keranjang</string>
    <string name="bagikan">Bagikan</string>
    <string name="rafa_store">RAFA STORE</string>
    <string name="daftar">Gabung</string>
    <string name="masuk">MASUK</string>
    <string name="batal">BATAL</string>
    <string name="tambahkan">TAMBAHKAN</string>
    <string name="cod">Cash On Delivery (COD)</string>
    <string name="opsi_kirim">OPSI KIRIM :</string>
    <string name="upload_product">upload_product</string>
    <string name="thumbnail_product">thumbnail product one</string>
    <string name="nama_produk">NAMA PRODUK</string>
    <string name="harga_product"> 120.000</string>
    <string name="user_location">Solo, Jawa Tengah</string>
    <string name="user_fullname">User Full Name</string>
    <string name="currency">Rp.</string>
    <string name="selesai_belanja">SELESAI BELANJA</string>
    <string name="checkout">Checkout</string>
    <string name="pengiriman">Pengiriman</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="detail_kontak">DETAIL KONTAK</string>
    <string name="alamat_pengiriman">ALAMAT PENGIRIMAN</string>
    <string name="nama">Nama</string>
    <string name="dummy_name">Abu Abdillah</string>
    <string name="email">Email</string>
    <string name="dummy_email">abu.abdillah@mail.com</string>
    <string name="no_telp">No_Telp</string>
    <string name="dummy_phone_number">(859) 261 &#8211; 0876</string>
    <string name="alamat">Alamat</string>
    <string name="dummy_alamat">GG. Perkutut 12a</string>
    <string name="negara">Negara</string>
    <string name="dummy_negara">Indonesia</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="dummy_kodepos">41071</string>
    <string name="kota">Kota</string>
    <string name="dummy_kota">Sukoharjo</string>
    <string name="provinsi">Provinsi</string>
    <string name="dummy_provinsi">Jawa Tengah</string>
    <string name="alamat_lanjutan">Waringinrejo, Cemani, Grogol</string>
    <string name="dummy_alamat_full">GG. Perkutut 12a, Waringinrejo, Cemani, Grogol, Sukoharjo, Jawa Tengah, 41071</string>
    <string name="metode_pembayaran">METODE PEMBAYARAN</string>
    <string name="dummy_bank">Bank Mandiri</string>
    <string name="dummy_rekening">88543 &#8211; 7043 &#8211; 2461 &#8211; 1195</string>
    <string name="no_rekening">Card Number</string>
    <string name="simpan_metode_pembayaran">Simpan metode pembayaran</string>
    <string name="akun_bank">Akun Bank</string>
    <string name="shipping_to">DIKIRIM KE:</string>
    <string name="ubah">ubah</string>
    <string name="detail_pembayaran">DETAIL PEMBAYARAN</string>
    <string name="pembelian">Pembelian</string>
    <string name="dummy_nama_produk">Jam Tangan Alexandre Christi</string>
    <string name="order">Pesanan</string>
    <string name="settings">Setelan</string>
    <string name="message">Pesan</string>
    <string name="product_review">Ulasan</string>
    <string name="news_feed">Feed</string>
    <string name="log_out">Keluar</string>
    <string name="profil">Profil</string>
    <string name="favorites">Favorit</string>
    <string name="reviews">Review</string>
    <string name="dummy_price">Rp. 730.000</string>
    <string name="balance">Balance</string>
    <string name="dummy_points">415 Points</string>
    <string name="ditandai">Ditandai</string>
    <string name="transaksi">Transaksi</string>
    <string name="voucher">Voucher</string>
    <string name="articles">Artikel</string>
    <string name="notification">notification</string>
    <string name="dummy_text">The Backpacker</string>
    <string name="dummy_text_slider">Suspendisse ornare est ac auctor pulvinar</string>
</resources>
