<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_single_item_product"
    android:layout_width="160dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/spacing_medium"
    android:layout_marginTop="@dimen/spacing_small"
    android:layout_marginEnd="@dimen/spacing_medium"
    android:layout_marginBottom="@dimen/spacing_small"
    app:cardCornerRadius="3dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_item_product_main"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/grey_40"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="@dimen/spacing_large"
            android:paddingTop="@dimen/spacing_xmedium"
            android:paddingBottom="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_item_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="@string/nama_produk"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_90"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_item_product_currency"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/spacing_medium"
                        android:text="@string/currency"
                        android:textColor="@color/blue_700"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_item_product_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/harga_product"
                        android:textColor="@color/blue_700"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>